syntax = "proto3";

package accumen.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/opendlt/accumulate-accumen/types/proto/accumen";

// ExecutionReceipt represents the receipt of transaction execution in Accumen
message ExecutionReceipt {
  // Transaction identification
  string tx_id = 1;
  uint64 block_height = 2;
  uint32 block_index = 3;
  google.protobuf.Timestamp timestamp = 4;
  string sequencer_id = 5;

  // Execution status
  bool success = 6;
  string error_message = 7;
  uint32 error_code = 8;

  // Gas and resource usage
  uint64 gas_used = 9;
  uint64 gas_limit = 10;
  uint64 gas_price = 11;
  google.protobuf.Duration execution_time = 12;
  uint64 memory_used = 13;
  uint32 memory_limit = 14;

  // WASM execution context
  ExecutionContext execution_context = 15;

  // L0 bridge information
  BridgeInfo bridge_info = 16;

  // State changes made by this transaction
  repeated StateChange state_changes = 17;

  // Log entries emitted during execution
  repeated LogEntry logs = 18;

  // Transaction signature information
  SignatureInfo signature = 19;

  // Additional metadata
  uint64 priority = 20;
  uint64 nonce = 21;
  uint64 size = 22;
  string version = 23;

  // Extension fields for future use
  map<string, bytes> extensions = 24;
}

// ExecutionContext contains WASM-specific execution details
message ExecutionContext {
  string wasm_module = 1;
  string function_name = 2;
  repeated uint64 parameters = 3;
  bytes return_value = 4;
  uint32 wasm_version = 5;
  repeated string imported_functions = 6;
  uint64 instruction_count = 7;
}

// BridgeInfo contains L0 bridge submission details
message BridgeInfo {
  string l0_tx_hash = 1;
  uint64 l0_block_height = 2;
  google.protobuf.Timestamp submission_time = 3;
  google.protobuf.Timestamp confirmation_time = 4;
  uint64 bridge_cost = 5;
  uint32 retry_count = 6;
  BridgeStatus status = 7;
  string submission_error = 8;
}

// BridgeStatus represents the status of L0 bridge submission
enum BridgeStatus {
  BRIDGE_STATUS_UNSPECIFIED = 0;
  BRIDGE_STATUS_PENDING = 1;
  BRIDGE_STATUS_SUBMITTED = 2;
  BRIDGE_STATUS_CONFIRMED = 3;
  BRIDGE_STATUS_FAILED = 4;
  BRIDGE_STATUS_EXPIRED = 5;
}

// StateChange represents a modification to the state store
message StateChange {
  StateOperation operation = 1;
  bytes key = 2;
  bytes old_value = 3;
  bytes new_value = 4;
  google.protobuf.Timestamp timestamp = 5;
}

// StateOperation defines the type of state modification
enum StateOperation {
  STATE_OPERATION_UNSPECIFIED = 0;
  STATE_OPERATION_SET = 1;
  STATE_OPERATION_DELETE = 2;
}

// LogEntry represents a log message emitted during execution
message LogEntry {
  LogLevel level = 1;
  string message = 2;
  google.protobuf.Timestamp timestamp = 3;
  string source = 4;
  map<string, string> attributes = 5;
}

// LogLevel defines the severity of log entries
enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_DEBUG = 1;
  LOG_LEVEL_INFO = 2;
  LOG_LEVEL_WARN = 3;
  LOG_LEVEL_ERROR = 4;
}

// SignatureInfo contains transaction signature details
message SignatureInfo {
  SignatureAlgorithm algorithm = 1;
  bytes public_key = 2;
  bytes signature = 3;
  string key_hash = 4;
  uint32 key_index = 5;
}

// SignatureAlgorithm defines supported signature algorithms
enum SignatureAlgorithm {
  SIGNATURE_ALGORITHM_UNSPECIFIED = 0;
  SIGNATURE_ALGORITHM_ED25519 = 1;
  SIGNATURE_ALGORITHM_SECP256K1 = 2;
  SIGNATURE_ALGORITHM_RSA = 3;
}

// Block represents a collection of transactions and their execution results
message Block {
  BlockHeader header = 1;
  repeated Transaction transactions = 2;
  repeated ExecutionReceipt receipts = 3;
  bytes state_root = 4;
  uint64 size = 5;
  BlockStatus status = 6;
}

// BlockHeader contains block metadata
message BlockHeader {
  uint64 height = 1;
  bytes prev_hash = 2;
  google.protobuf.Timestamp timestamp = 3;
  string sequencer_id = 4;
  uint32 tx_count = 5;
  uint64 gas_used = 6;
  uint64 gas_limit = 7;
  bytes merkle_root = 8;
  uint32 version = 9;
}

// BlockStatus represents the current status of a block
enum BlockStatus {
  BLOCK_STATUS_UNSPECIFIED = 0;
  BLOCK_STATUS_PENDING = 1;
  BLOCK_STATUS_EXECUTING = 2;
  BLOCK_STATUS_COMPLETED = 3;
  BLOCK_STATUS_FAILED = 4;
}

// Transaction represents a transaction in the Accumen network
message Transaction {
  string id = 1;
  string from = 2;
  string to = 3;
  bytes data = 4;
  uint64 gas_limit = 5;
  uint64 gas_price = 6;
  uint64 nonce = 7;
  bytes signature = 8;
  bytes hash = 9;
  uint64 size = 10;
  google.protobuf.Timestamp received_at = 11;
  uint64 priority = 12;
  TransactionType type = 13;
}

// TransactionType defines different types of transactions
enum TransactionType {
  TRANSACTION_TYPE_UNSPECIFIED = 0;
  TRANSACTION_TYPE_WASM_CALL = 1;
  TRANSACTION_TYPE_WASM_DEPLOY = 2;
  TRANSACTION_TYPE_STATE_UPDATE = 3;
  TRANSACTION_TYPE_BRIDGE_ANCHOR = 4;
}

// ReceiptQuery represents a query for execution receipts
message ReceiptQuery {
  oneof query {
    string tx_id = 1;
    uint64 block_height = 2;
    AddressQuery address = 3;
    TimeRangeQuery time_range = 4;
  }
  uint32 limit = 5;
  string continuation_token = 6;
  bool include_logs = 7;
  bool include_state_changes = 8;
}

// AddressQuery represents a query by address
message AddressQuery {
  string address = 1;
  bool include_from = 2;
  bool include_to = 3;
}

// TimeRangeQuery represents a query by time range
message TimeRangeQuery {
  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;
}

// ReceiptQueryResponse represents the response to a receipt query
message ReceiptQueryResponse {
  repeated ExecutionReceipt receipts = 1;
  string continuation_token = 2;
  uint32 total_count = 3;
  bool has_more = 4;
}

// ReceiptMetrics contains aggregated metrics about receipts
message ReceiptMetrics {
  uint64 total_transactions = 1;
  uint64 successful_transactions = 2;
  uint64 failed_transactions = 3;
  uint64 total_gas_used = 4;
  double average_gas_used = 5;
  google.protobuf.Duration average_execution_time = 6;
  uint64 total_state_changes = 7;
  uint64 total_log_entries = 8;
  google.protobuf.Timestamp last_updated = 9;
}